    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
9-Mar-2004
    Problems fixed:
        1. Support JavaScript changing "disabled" attribute on form controls
        2. Forms defined after a <script> section which accessed document.forms would not be found if document.forms
           was also accessed in a subsequent <script> section after the new form definition.
    Notes:
        1. Upgraded NekoHTML to 0.9.1
        2. Upgraded Xerces to 2.5.0
        3. Upgraded Rhino to 1.5R4.1


Revision History:
1-Mar-2004
    Acknowledgements:
        1. Thanks to Dan Frankow for supplying an implementation of ServletContext.getMimeType and correcting the
           implementation of HttpSession.setAttribute when the value is null
        2. Thanks to Michael Corum for making the Button.disabled property settable from JavaScript.

    Problems fixed:
        1. ServletUnit now applies character encoding in interpreting post parameters
        2. Patch #873911: ServletUnit now supports ServletContext.getMimeType
        3. Patch #873914: ServletUnit HttpSession.setAttribute( name, null ) now properly removes the named attribute
        4. Patch #812709: Support JavaScript changing "disabled" attribute on Buttons

26-Feb-2004
Additions:
    1. Added support for filters

14-Feb-2004
Additions:
    1. Added support for ServletContextAttributeListener and HttpSessionAttributeListener

12-Feb-2004
Acknowledgements:
    Thanks to Jarom Smith for finding some typos in the tutorial.
    Thanks to Jay Dunning for providing an implementation of HttpServletResponse.containsHeader
                          and implementing support for ServletContextListeners.
